--- a/trbo/src/main/resources/templates/usuario/listar.html
+++ b/trbo/src/main/resources/templates/usuario/listar.html
@@ -11,7 +11,7 @@
 
     <ul class="nav nav-pills mb-3">
         <li class="nav-item"><a class="nav-link" href="/">Página inicial</a></li>
-        <li class="nav-item"><a class="nav-link" href="usuario/criar">Novo Usuario</a></li>
+        <li class="nav-item"><a class="nav-link" href="usuario/cadastrar">Novo Usuario</a></li>
     </ul>
     <h1>Lista de Usuários</h1>
     <table class="table table-hover">
@@ -26,7 +26,7 @@
                 <td th:text=${user.id}></td>
                 <td th:text=${user.nomeCompleto}></td>
                 <td th:text=${user.setor}></td>
-                <td th:text=${user.codigo}></td>
+                <td th:text=${user.codigoVinculo}></td>
                 <td th:text=${user.telefone}></td>
                 <td th:text=${user.celular}></td>
                 <td th:text=${user.email}></td>
