--- a/trbo/src/main/resources/templates/index.html
+++ b/trbo/src/main/resources/templates/index.html
@@ -10,6 +10,7 @@
 
    <ul class="nav flex-column">
       <li class="nav-item"><a class="nav-link" href="usuario">Usuarios</a></li>
+      <li class="nav-item"><a class="nav-link" href="atendente">Atendentes</a></li>
    </ul>
 </body>
 </html>
