--- a/trbo/src/main/resources/templates/index.html
+++ b/trbo/src/main/resources/templates/index.html
@@ -11,6 +11,7 @@
    <ul class="nav flex-column">
       <li class="nav-item"><a class="nav-link" href="usuario">Usuarios</a></li>
       <li class="nav-item"><a class="nav-link" href="atendente">Atendentes</a></li>
+      <li class="nav-item"><a class="nav-link" href="categoria">Categorias</a></li>
    </ul>
 </body>
 </html>
