--- a/trbo/src/main/resources/templates/index.html
+++ b/trbo/src/main/resources/templates/index.html
@@ -12,6 +12,7 @@
       <li class="nav-item"><a class="nav-link" href="usuario">Usuarios</a></li>
       <li class="nav-item"><a class="nav-link" href="atendente">Atendentes</a></li>
       <li class="nav-item"><a class="nav-link" href="categoria">Categorias</a></li>
+      <li class="nav-item"><a class="nav-link" href="atendimento">Atendimentos</a></li>
    </ul>
 </body>
 </html>
