Listagem de Atendimentos não Fechados

--- a/trbo/src/main/resources/templates/atendimento/gestao.html
+++ b/trbo/src/main/resources/templates/atendimento/gestao.html
@@ -12,9 +12,11 @@
     <ul class="nav nav-pills mb-3">
         <li class="nav-item"><a class="nav-link" href="/">Página inicial</a></li>
         <li class="nav-item"><a class="nav-link" href="atendimento/novo">Novo Atendimento</a></li>
+        <li class="nav-item"><a class="nav-link" href="atendimentoNaoFechados">Lista de Atendimento Não Fechados</a></li>
     </ul>
     <h1>Atendimentos</h1>
     <table class="table table-hover">
+    
     <caption>Atendimentos existentes</caption>
     
         <thead>
