--- a/trbo/src/main/resources/templates/atendimento/listNaoFechados.html
+++ b/trbo/src/main/resources/templates/atendimento/listNaoFechados.html
@@ -7,19 +7,42 @@
 </head>
 <body>
     
+   
     <header th:include="cabecalho :: header"></header>
 
     <ul class="nav nav-pills mb-3">
         <li class="nav-item"><a class="nav-link" href="/">Página inicial</a></li>
-        <li class="nav-item"><a class="nav-link" href="atendimento/novo">Novo Atendimento</a></li>
+        <li class="nav-item"><a class="nav-link" href="atendimento">Voltar</a></li>
+        
     </ul>
-    <h1>Atendimentos</h1>
+    <h1>Atendimentos não Fechados</h1>
     <table class="table table-hover">
+    
     <caption>Atendimentos existentes</caption>
+    
         <thead>
-            <tr> <th>id</th> <th>Atendente</th> <th>Categoria</th> <th>Descrição</th> <th>Usuario</th> <th></th> <th></th> </tr>
+            <tr> <th>id</th> <th>Atendente</th> <th>Categoria</th> <th>Descrição</th> <th>Usuario</th> <th>Abertura</th> <th>Status</th> <th></th> <th></th> </tr>
         </thead>
         <tbody>
+
+            <!--<tr th:each="atendimento:${atendimentos}" th:object=${atendimento}>
+                    <td th:text=*{id}></td>
+                    <td th:text=*{atendente.getNomeCompleto()}></td>
+                    <td th:text=*{categoria.getTitulo()}></td>
+                    <td th:text=*{descricao}></td>
+                    <div th:if=*{usuario==null}>
+                        <td>Usuario não informado</td>
+                    </div>
+                    <div th:unless=*{usuario==null}>
+                        <td th:text=*{usuario.getNomeCompleto()}></td>
+                    </div>
+                    <td th:text=*{dataCriacao}></td>
+                    <td th:text=${status}></td>-->
+                    
+                    
+                    
+                    
+
             <tr th:each="atendimento: ${atendimentos}">
                 
                 <td th:text=${atendimento.id}></td>
@@ -27,12 +50,13 @@
                 <td th:text=${atendimento.categoria.titulo}></td>
                 <td th:text=${atendimento.descricao}></td>
                 <td th:text=${atendimento.usuario.nomeCompleto}></td>
+                <td th:text=${atendimento.dataCriacao}></td>
+                <td th:text=${atendimento.status}></td>
 
                 <td><a th:href="@{'atendimento/alterar/' + ${atendimento.id}}" role="button">Alterar</a></td>
                 <td><a th:href="@{'atendimento/fechar/' + ${atendimento.id}}" role="button">Fechar</a></td>
             </tr>
         </tbody>
     </table>
-    
 </body>
 </html>
