--- a/trbo/src/main/resources/templates/atendimento/listNaoFechadosPorAtendente.html
+++ b/trbo/src/main/resources/templates/atendimento/listNaoFechadosPorAtendente.html
@@ -12,10 +12,10 @@
 
     <ul class="nav nav-pills mb-3">
         <li class="nav-item"><a class="nav-link" href="/">Página inicial</a></li>
-        <li class="nav-item"><a class="nav-link" href="atendimento">Voltar</a></li>
+        <li class="nav-item"><a class="nav-link" href="/atendente">Voltar</a></li>
         
     </ul>
-    <h1>Atendimentos não Fechados</h1>
+    <h1>Atendimentos não Fechados Feito Pela Atendente: <span th:text="${aten.nomeCompleto}"></span></h1>
     <table class="table table-hover">
     
     <caption>Atendimentos existentes</caption>
@@ -25,10 +25,7 @@
         </thead>
         <tbody>
 
- 
-                    
-                    
-                    
+       
 
             <tr th:each="atendimento: ${atendimentos}">
                 
