--- a/trbo/src/main/resources/templates/atendimento/listPorUsuario.html
+++ b/trbo/src/main/resources/templates/atendimento/listPorUsuario.html
@@ -12,10 +12,10 @@
 
     <ul class="nav nav-pills mb-3">
         <li class="nav-item"><a class="nav-link" href="/">Página inicial</a></li>
-        <li class="nav-item"><a class="nav-link" href="atendimento">Voltar</a></li>
+        <li class="nav-item"><a class="nav-link" href="/usuario">Voltar</a></li>
         
     </ul>
-    <h1>Atendimentos não Fechados</h1>
+    <h1>Atendimentos Feito Com Usuario: <span th:text="${user.nomeCompleto}"></span> </h1>
     <table class="table table-hover">
     
     <caption>Atendimentos existentes</caption>
@@ -24,11 +24,8 @@
             <tr> <th>id</th> <th>Atendente</th> <th>Categoria</th> <th>Descrição</th> <th>Usuario</th> <th>Abertura</th> <th>Status</th> <th></th> <th></th> </tr>
         </thead>
         <tbody>
-
  
-                    
-                    
-                    
+                             
 
             <tr th:each="atendimento: ${atendimentos}">
                 
