--- a/trbo/src/main/resources/templates/atendimento/gestao.html
+++ b/trbo/src/main/resources/templates/atendimento/gestao.html
@@ -20,7 +20,7 @@
     <caption>Atendimentos existentes</caption>
     
         <thead>
-            <tr> <th>id</th> <th>Atendente</th> <th>Categoria</th> <th>Descrição</th> <th>Usuario</th> <th>Abertura</th> <th>Status</th> <th></th> <th></th> </tr>
+            <tr> <th>id</th> <th>Atendente</th> <th>Categoria</th> <th>Descrição</th> <th>Usuario</th> <th>Abertura</th> <th>Status</th> <th></th> <th></th> <th></th> </tr>
         </thead>
         <tbody>
 
@@ -52,6 +52,7 @@
                 <td th:text=${atendimento.dataCriacao}></td>
                 <td th:text=${atendimento.status}></td>
 
+                <td><a th:href="@{'atendimento/detalhes/' + ${atendimento.id}}" role="button">Detalhes</a></td>
                 <td><a th:href="@{'atendimento/alterar/' + ${atendimento.id}}" role="button">Alterar</a></td>
                 <td><a th:href="@{'atendimento/fechar/' + ${atendimento.id}}" role="button">Fechar</a></td>
             </tr>
