Listagem de atendimentos fechado por Categoria

--- a/trbo/src/main/resources/templates/atendimento/listNaoFechadosCategoria.html
+++ b/trbo/src/main/resources/templates/atendimento/listNaoFechadosCategoria.html
@@ -12,10 +12,10 @@
 
     <ul class="nav nav-pills mb-3">
         <li class="nav-item"><a class="nav-link" href="/">Página inicial</a></li>
-        <li class="nav-item"><a class="nav-link" href="atendimento">Voltar</a></li>
+        <li class="nav-item"><a class="nav-link" href="/categoria">Voltar</a></li>
         
     </ul>
-    <h1>Atendimentos não Fechados</h1>
+    <h1>Atendimentos não Fechados da Categoria <span th:text="${categoria.titulo}"> </span>   </h1>
     <table class="table table-hover">
     
     <caption>Atendimentos existentes</caption>
