--- a/trbo/src/main/resources/templates/categoria/listar.html
+++ b/trbo/src/main/resources/templates/categoria/listar.html
@@ -26,8 +26,9 @@
                 <td th:text=${categoria.id}></td>
                 <td th:text=${categoria.titulo}></td>
                 <td th:text=${categoria.descricao}></td>
-                <td><a th:href="@{'categoria/editar/' + ${categoria.id}}" role="button">Editar</a></td>
-                <td><a th:href="@{'categoria/deletar/' + ${categoria.id}}" role="button">Deletar</a></td>
+                <td><a th:href="@{'/categoria/editar/' + ${categoria.id}}" role="button">Editar</a></td>
+                <td><a th:href="@{'/categoria/deletar/' + ${categoria.id}}" role="button">Deletar</a></td>
+                <td><a th:href="@{'/atendimentoNaoFechadosPorCategoria/' + ${categoria.id}}" role="button">Atendimentos</a></td>
             </tr>
         </tbody>
     </table>
