--- a/trbo/src/main/resources/templates/atendimento/listNaoFechadosCategoria.html
+++ b/trbo/src/main/resources/templates/atendimento/listNaoFechadosCategoria.html
@@ -21,7 +21,7 @@
     <caption>Atendimentos existentes</caption>
     
         <thead>
-            <tr> <th>id</th> <th>Atendente</th> <th>Categoria</th> <th>Descrição</th> <th>Usuario</th> <th>Abertura</th> <th>Status</th> <th></th> <th></th> </tr>
+            <tr> <th>id</th> <th>Atendente</th> <th>Categoria</th> <th>Descrição</th> <th>Usuario</th> <th>Abertura</th> <th>Status</th>  </tr>
         </thead>
         <tbody>
 
@@ -40,9 +40,7 @@
                 <td th:text=${atendimento.dataCriacao}></td>
                 <td th:text=${atendimento.status}></td>
 
-                <td><a th:href="@{'/atendimento/alterar/' + ${atendimento.id}}" role="button">Alterar</a></td>
-                <td><a th:href="@{'/atendimento/fechar/' + ${atendimento.id}}" role="button">Fechar</a></td>
-            </tr>
+                </tr>
         </tbody>
     </table>
 </body>
