--- a/trbo/src/main/resources/templates/atendimento/listNaoFechadosPorAtendente.html
+++ b/trbo/src/main/resources/templates/atendimento/listNaoFechadosPorAtendente.html
@@ -15,13 +15,14 @@
         <li class="nav-item"><a class="nav-link" href="/atendente">Voltar</a></li>
         
     </ul>
-    <h1>Atendimentos não Fechados Feito Pela Atendente: <span th:text="${aten.nomeCompleto}"></span></h1>
+    <h2>Atendimentos não Fechados Feito Pela Atendente: <span th:text="${aten.nomeCompleto}"></span></h2>
+    <h3>Quantidade de Atendimentos: <span th:text="${quantAtendimentos}"></span></h3>
     <table class="table table-hover">
     
     <caption>Atendimentos existentes</caption>
     
         <thead>
-            <tr> <th>id</th> <th>Atendente</th> <th>Categoria</th> <th>Descrição</th> <th>Usuario</th> <th>Abertura</th> <th>Status</th> <th></th> <th></th> </tr>
+            <tr> <th>id</th> <th>Atendente</th> <th>Categoria</th> <th>Descrição</th> <th>Usuario</th> <th>Abertura</th> <th>Status</th> </tr>
         </thead>
         <tbody>
 
@@ -37,8 +38,7 @@
                 <td th:text=${atendimento.dataCriacao}></td>
                 <td th:text=${atendimento.status}></td>
 
-                <td><a th:href="@{'/atendimento/alterar/' + ${atendimento.id}}" role="button">Alterar</a></td>
-                <td><a th:href="@{'/atendimento/fechar/' + ${atendimento.id}}" role="button">Fechar</a></td>
+        
             </tr>
         </tbody>
     </table>
