--- a/trbo/src/main/resources/templates/atendimento/gestao.html
+++ b/trbo/src/main/resources/templates/atendimento/gestao.html
@@ -12,7 +12,6 @@
     <ul class="nav nav-pills mb-3">
         <li class="nav-item"><a class="nav-link" href="/">Página inicial</a></li>
         <li class="nav-item"><a class="nav-link" href="atendimento/novo">Novo Atendimento</a></li>
-        <li class="nav-item"><a class="nav-link" href="atendimentoNaoFechados">Lista de Atendimento Não Fechados</a></li>
     </ul>
     <h1>Atendimentos</h1>
     <table class="table table-hover">
@@ -23,25 +22,7 @@
             <tr> <th>id</th> <th>Atendente</th> <th>Categoria</th> <th>Descrição</th> <th>Usuario</th> <th>Abertura</th> <th>Status</th> <th></th> <th></th> <th></th> </tr>
         </thead>
         <tbody>
-
-            <!--<tr th:each="atendimento:${atendimentos}" th:object=${atendimento}>
-                    <td th:text=*{id}></td>
-                    <td th:text=*{atendente.getNomeCompleto()}></td>
-                    <td th:text=*{categoria.getTitulo()}></td>
-                    <td th:text=*{descricao}></td>
-                    <div th:if=*{usuario==null}>
-                        <td>Usuario não informado</td>
-                    </div>
-                    <div th:unless=*{usuario==null}>
-                        <td th:text=*{usuario.getNomeCompleto()}></td>
-                    </div>
-                    <td th:text=*{dataCriacao}></td>
-                    <td th:text=${status}></td>-->
-                    
-                    
-                    
-                   
-
+            
             <tr th:each="atendimento: ${atendimentos}">
                 
                 <td th:text=${atendimento.id}></td>
@@ -54,7 +35,7 @@
 
                 <td><a th:href="@{'atendimento/detalhes/' + ${atendimento.id}}" role="button">Detalhes</a></td>
                 <td><a th:href="@{'atendimento/alterar/' + ${atendimento.id}}" role="button">Alterar</a></td>
-                <td><a th:href="@{'atendimento/fechar/' + ${atendimento.id}}" role="button">Fechar</a></td>
+                <td><a th:href="@{'atendimento/deletar/' + ${atendimento.id}}" role="button">Excluir</a></td>
             </tr>
         </tbody>
     </table>
