--- a/trbo/src/main/resources/templates/atendimento/novo.html
+++ b/trbo/src/main/resources/templates/atendimento/novo.html
@@ -18,7 +18,7 @@
     
         <fieldset class="form-group">
             <div class="row">
-                <legend class="col-form-label col-sm-2 pt-0">Atendentes:</legend>
+                <legend class="col-form-label col-sm-2 pt-0">Atendente Responsável:</legend>
                     <div class="col-sm-10">
                         <div class="form-check" th:each="atendente: ${atendentes}" th:object=${Atendente}>
                             <input class="form-check-input" type="radio" th:value="${atendente.id}" name="atendente">
