--- a/trbo/src/main/resources/templates/atendimento/novo.html
+++ b/trbo/src/main/resources/templates/atendimento/novo.html
@@ -59,6 +59,7 @@
             </div>
         </fieldset>
 
+        <span th:text="${erro}"></span>
         <div class="form-group row">
             <div class="col-sm-10">
                 <button type="submit" class="btn btn-primary">Iniciar</button>
